UIUX-1462: fix horizontal scroll problem with datatables

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -3,7 +3,7 @@ table.dataTable {
   margin: 0;
   clear: both;
   width: 100%;
-  border-right: 1px solid transparent;
+  overflow-x: hidden;
 
   /* ---------
   TABLE HEADER CELL (specific) */
